--- a/FlowerShop/AppShell.xaml
+++ b/FlowerShop/AppShell.xaml
@@ -4,11 +4,17 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:FlowerShop"
-    Shell.FlyoutBehavior="Disabled">
+    xmlns:pages="clr-namespace:FlowerShop.Pages"
+    Shell.FlyoutBehavior="Disabled"
+    BackgroundColor="DarkGoldenrod">
 
     <ShellContent
-        Title="Home"
+        Title=""
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
+    <ShellContent
+        Title="Home"
+        ContentTemplate="{DataTemplate pages:HomePage}"
+        Route="HomePage"/>
 </Shell>
