--- a/FlowerShop/Pages/HomePage.xaml
+++ b/FlowerShop/Pages/HomePage.xaml
@@ -2,11 +2,46 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FlowerShop.Pages.HomePage"
-             Title="HomePage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Flower world"
+             Padding="15">
+   
+    <ScrollView>
+        <VerticalStackLayout>
+            <Border StrokeShape="RoundRectangle 10"
+                    StrokeThickness="0"
+                    BackgroundColor="Goldenrod"
+                    VerticalOptions="Start"
+                    Padding="15">
+                <Grid ColumnDefinitions="*, 150"
+                      RowDefinitions="*, auto">
+                    <VerticalStackLayout Grid.Column="0"
+                                         Grid.Row="0"
+                                         Spacing="10">
+                        <Label Text="Best Offer"
+                               FontSize="25"
+                               FontAttributes="Bold"
+                               VerticalOptions="Center"/>
+                        <Label Text="Grab this amaizing offer before it expires!!"/>
+                        
+                    </VerticalStackLayout>
+                    <Button
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Text="Get it now"
+                        BackgroundColor="PaleGoldenrod"
+                        TextColor="Black"
+                        FontAttributes="Bold"
+                        CornerRadius="22"
+                        HorizontalOptions="Center"
+                        Padding="50, 0"/>
+                    
+                    <Image Grid.Column="1"
+                           Grid.RowSpan="2"
+                           Source="flower_six"
+                           HeightRequest="150"
+                           WidthRequest="150"/>
+                </Grid>
+            </Border>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
